sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
  for (i<-0 to length-2) {
    if tab(i)>tab(i+1){
      var tmp=tab(i)
      tab(i)=tab(i+1)
      tab(i+1)=tmp
    }
  }
  
}